data/derived/comb/progs/unify/prog4662.ml.out
Characters 78-88:
  let f a x = List.rev t^a in
              ^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
